--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta https-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-  <link rel="stylesheet" href="/index.css">
+ <link rel="icon" href="<%= BASE_URL %>favicon.png"> 
+<!--  <link rel="stylesheet" href="/index.css"> -->
   <title>evgenis-hemsida</title>
 </head>
 
@@ -18,5 +18,6 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
+
 
 </html>
