--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <meta https-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="HandheldFriendly" content="True">
+
+<meta name="MobileOptimized" content="320">
+
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <link rel="icon" href="<%= BASE_URL %>favicon.png"> 
 <!--  <link rel="stylesheet" href="/index.css"> -->
   <title>Evgeni Leonovs hemsida</title>
